# sistem-projects

./: Cargo.toml  Dockerfile  README.md  kubernetes_deployment.yml
migrations/: 01_projects.sql  01_test.sql  02_users.sql
src/: config.rs  main.rs
src/projects/: mod.rs  model.rs  routes.rs
src/projects/models/: mod.rs  phase.rs  project.rs  task.rs  user.rs
src/projects/routes/: mod.rs  phases.rs  projects.rs  tasks.rs  users.rs
