[package]
name = "sistem_projects"
version = "0.1.0"
authors = ["Vid Drobnic <vid.drobnic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "postgres", "migrate"] }
serde = "1.0.118"
serde_json = "1.0.60"
anyhow = "1"